hphp/hack/test/dot_php/hack-decl.php.exp
File "hack-decl.php", line 3, characters 10-12:
Was expecting a return type hint (Typing[4030])
File "hack-decl.php", line 3, characters 14-17:
Was expecting a type hint (Typing[4032])
